--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -669,6 +669,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8425d790-e485-4ad9-8f08-f065a0ad6218",
+   "metadata": {},
+   "source": [
+    "#### [LLM_Fine-tuning](LLM_Fine-tuning2.ipynb)\n",
+    "[PhiCookBook/code/04.Finetuning/Phi-3-finetune-lora-python.ipynb](https://github.com/microsoft/PhiCookBook/blob/main/code/04.Finetuning/Phi-3-finetune-lora-python.ipynb)に寄せたDebug用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a9e4cb29-b0dc-4120-b8b7-f9a0b6303463",
    "metadata": {},
    "source": [
