--- a/Notebook/Jupyter/path/LLM_Fine-tuning1.ipynb
+++ b/Notebook/Jupyter/path/LLM_Fine-tuning1.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0581762d-7174-46e1-80c2-c67e72556b50",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "500e7d07-4341-4c7b-b57f-157baee2b7a2",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b2fc7e02-9076-43e9-8875-8f03469e95de",
    "metadata": {},
    "outputs": [
@@ -635,6 +635,12 @@
     "# 'set_seed' is a function that sets the seed for generating random numbers.\n",
     "# 'pipeline' is a function that creates a pipeline that can process data and make predictions.\n",
     "\n",
+    "# https://github.com/unslothai/unsloth/issues/1264\n",
+    "# 順番が関係ある？\n",
+    "#from transformers import TrainingArguments\n",
+    "#from trl import SFTConfig\n",
+    "#from trl import SFTTrainer  \n",
+    "\n",
     "# Hugging Faceの「transformers」ライブラリから提供\n",
     "# ・'AutoModelForCausalLM'は因果言語モデリングのための汎用的なTransformerモデルを提供\n",
     "# ・'AutoTokenizer'は汎用的なTokenizerクラスを提供するクラス\n",
@@ -653,6 +659,7 @@
     "\n",
     "# 'SFTTrainer' is a class from the 'trl' library that provides a trainer for soft fine-tuning.\n",
     "# 'SFTTrainer' は、ソフトファインチューニング用のトレーナーを提供する 'trl' ライブラリのクラス\n",
+    "from trl import SFTConfig\n",
     "from trl import SFTTrainer"
    ]
   },
@@ -700,7 +707,7 @@
     "# microsoft/Phi-3-medium-128k-instruct-onnx-cuda\n",
     "# microsoft/Phi-3-medium-128k-instruct-onnx-directml\n",
     "# microsoft/Phi-3-mini-4k-instruct-gguf\n",
-    "model_id = \"microsoft/Phi-3-mini-4k-instruct\"\n",
+    "model_id =   \"microsoft/Phi-3-mini-4k-instruct\"\n",
     "model_name = \"microsoft/Phi-3-mini-4k-instruct\"\n",
     "\n",
     "# 'dataset_name' is the identifier for the dataset that you want to use for fine-tuning. \n",
@@ -1122,8 +1129,32 @@
    "id": "f90b387c-4c58-4cfd-8568-a36d654e5f6a",
    "metadata": {},
    "source": [
-    "ごちゃごちゃ長ったらしいけど、ここでは、`['instruction', 'input', 'output', 'prompt'],`を`['instruction', 'input', 'output', 'messages', 'text']`に変換している。\n",
-    "なお`messages`は、`user`、`assistant`ロール情報（`content`、`Input`、`role`）から構成される。`text`には、`user`、`assistant`ロールの情報を結合したような情報が格納されている。"
+    "ごちゃごちゃ長ったらしいけど、ここでは、`['instruction', 'input', 'output', 'prompt'],`を`['instruction', 'input', 'output', 'messages', 'text']`に変換している。なお`prompt`は、`Instruction`、`Input`、`Output`から構成される。`messages`は、`user`、`assistant`ロール情報（`content`、`Input`、`role`）から構成される。`text`には、２つのロールの情報を結合したような情報が格納されている（重複した項目には同じ内容が格納されている）。\n",
+    "```JSON\n",
+    "{'instruction': 'Create a function to calculate the sum of a sequence of integers.',\n",
+    " 'input': '[1, 2, 3, 4, 5]',\n",
+    " 'output': '# Python code\\ndef sum_sequence(sequence):\\n  sum = 0\\n  for num in sequence:\\n    sum += num\\n  return sum',\n",
+    " 'prompt': 'Below is an instruction that describes a task. Write a response that appropriately completes the request.\\n\\n### Instruction:\\nCreate a function to calculate the sum of a sequence of integers.\\n\\n### Input:\\n[1, 2, 3, 4, 5]\\n\\n### Output:\\n# Python code\\ndef sum_sequence(sequence):\\n  sum = 0\\n  for num in sequence:\\n    sum += num\\n  return sum',\n",
+    " 'messages': [{'content': 'Create a function to calculate the sum of a sequence of integers.\\n Input: [1, 2, 3, 4, 5]',\n",
+    "   'role': 'user'},\n",
+    "  {'content': '# Python code\\ndef sum_sequence(sequence):\\n  sum = 0\\n  for num in sequence:\\n    sum += num\\n  return sum',\n",
+    "   'role': 'assistant'}],\n",
+    " 'text': '<|user|>\\nCreate a function to calculate the sum of a sequence of integers.\\n Input: [1, 2, 3, 4, 5]<|end|>\\n<|assistant|>\\n# Python code\\ndef sum_sequence(sequence):\\n  sum = 0\\n  for num in sequence:\\n    sum += num\\n  return sum<|end|>\\n<|endoftext|>'}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70100a04-46bb-4ec7-a039-243ceab7e846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SFTTrainerでdataset_text_fieldの引数を使う場合、学習データの構造次第では意図した学習が行われない可能性がある\n",
+    "# https://zenn.dev/aratako_lm/articles/45ce30a5d1f30b\n",
+    "dataset_chatml = dataset_chatml.remove_columns([\"messages\", \"instruction\"])\n",
+    "dataset_chatml = dataset_chatml.map(lambda x: {'completion': x['output']})\n",
+    "dataset_chatml[0]"
    ]
   },
   {
@@ -1272,7 +1303,7 @@
     "# ・'cache_dir' は、既定の保存先は、~/.cache/huggingface/hub/ 保存先を変更したい場合パスを指定\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "          model_id, torch_dtype=compute_dtype, trust_remote_code=True, device_map=device_map,\n",
-    "          attn_implementation=attn_implementation,cache_dir=cache_dir\n",
+    "          attn_implementation=attn_implementation, cache_dir=cache_dir\n",
     ")"
    ]
   },
@@ -1368,9 +1399,11 @@
     ")\n",
     "'''\n",
     "\n",
-    "from trl import SFTConfig\n",
-    "#from transformers import TrainingArguments, DataCollatorForSeq2Seq\n",
-    "#from unsloth import is_bfloat16_supported\n",
+    "# https://github.com/unslothai/unsloth/issues/1264\n",
+    "# 順番が関係ある？\n",
+    "#from transformers import TrainingArguments\n",
+    "#from trl import SFTConfig\n",
+    "#from trl import SFTTrainer  \n",
     "\n",
     "args = SFTConfig(\n",
     "    output_dir=f\"{cache_dir}/phi-3-mini-LoRA\", #\"./phi-3-mini-LoRA\",\n",
@@ -1393,8 +1426,8 @@
     "    lr_scheduler_type=\"linear\",\n",
     "    report_to=\"none\", #\"wandb\",\n",
     "    seed=42,\n",
-    "    max_seq_length=512,\n",
-    "    dataset_text_field=\"text\",\n",
+    "    max_seq_length=512,          # SFTTrainerから移動\n",
+    "    dataset_text_field=\"text\", # SFTTrainerから移動\n",
     "\n",
     "    #per_device_train_batch_size=2,\n",
     "    #gradient_accumulation_steps=4,\n",
@@ -1541,7 +1574,7 @@
     "        peft_config=peft_config,\n",
     "        #dataset_text_field=\"text\",  # SFTConfigへ移動\n",
     "        #max_seq_length=512,         # SFTConfigへ移動\n",
-    "        #tokenizer=tokenizer,        # 一個下へ移動\n",
+    "        #tokenizer=tokenizer,        # 一つ下へ移動\n",
     "        processing_class=tokenizer,\n",
     "        args=args,\n",
     ")"
