--- a/Notebook/Jupyter/path/LLM_Fine-tuning2.ipynb
+++ b/Notebook/Jupyter/path/LLM_Fine-tuning2.ipynb
@@ -149,24 +149,27 @@
     "# microsoft/Phi-3-medium-128k-instruct-onnx-cuda\n",
     "# microsoft/Phi-3-medium-128k-instruct-onnx-directml\n",
     "# microsoft/Phi-3-mini-4k-instruct-gguf\n",
-    "\n",
-    "model_id = \"microsoft/Phi-3-mini-4k-instruct\"\n",
+    "model_id =   \"microsoft/Phi-3-mini-4k-instruct\"\n",
     "model_name = \"microsoft/Phi-3-mini-4k-instruct\"\n",
     "\n",
     "# 'dataset_name' is the identifier for the dataset that you want to use for fine-tuning. \n",
     "# In this case, it's the 'python_code_instructions_18k_alpaca' dataset from iamtarun (Ex: iamtarun/python_code_instructions_18k_alpaca).\n",
     "# Update Dataset Name to your dataset name\n",
-    "dataset_name = \"Insert your dataset name here\"\n",
+    "#dataset_name = \"Insert your dataset name here\"\n",
+    "dataset_name = \"iamtarun/python_code_instructions_18k_alpaca\" # \"Insert your dataset name here\"\n",
     "\n",
     "# 'dataset_split' is the split of the dataset that you want to use for training. \n",
     "# In this case, it's the 'train' split.\n",
     "dataset_split= \"train\"\n",
     "\n",
     "# 'new_model' is the name that you want to give to the fine-tuned model.\n",
-    "new_model = \"Name of your new model\"\n",
+    "#new_model = \"Name of your new model\"\n",
+    "new_model = \"Phi-3-mini-4k-finetuned\"\n",
     "\n",
     "# 'hf_model_repo' is the repository on the Hugging Face Model Hub where the fine-tuned model will be saved. Update UserName to your Hugging Face Username\n",
-    "hf_model_repo=\"UserName/\"+new_model\n",
+    "#hf_model_repo=\"UserName/\"+new_model\n",
+    "hf_userName = \"nishi74322014\"\n",
+    "hf_model_repo = hf_userName + \"/\" + new_model\n",
     "\n",
     "# 'device_map' is a dictionary that maps the model to the GPU device. \n",
     "# In this case, the entire model is loaded on GPU 0.\n",
@@ -911,7 +914,7 @@
     "# 'attn_implementation' is set to the attention implementation determined earlier.\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "          model_id, torch_dtype=compute_dtype, trust_remote_code=True, device_map=device_map,\n",
-    "          attn_implementation=attn_implementation\n",
+    "          attn_implementation=attn_implementation,cache_dir=\"/mnt/tmp\"\n",
     ")"
    ]
   },
@@ -973,7 +976,7 @@
     "\n",
     "args = TrainingArguments(\n",
     "        output_dir=\"./phi-3-mini-LoRA\",\n",
-    "        evaluation_strategy=\"steps\",\n",
+    "        #evaluation_strategy=\"steps\",\n",
     "        do_eval=True,\n",
     "        optim=\"adamw_torch\",\n",
     "        per_device_train_batch_size=8,\n",
@@ -1000,6 +1003,14 @@
     "        task_type=TaskType.CAUSAL_LM,\n",
     "        target_modules=target_modules,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ---> 31 args = TrainingArguments(\n",
+    "- TypeError: TrainingArguments.__init__() got an unexpected keyword argument 'evaluation_strategy'\n"
    ]
   },
   {
@@ -1073,11 +1084,24 @@
     "        train_dataset=dataset_chatml['train'],\n",
     "        eval_dataset=dataset_chatml['test'],\n",
     "        peft_config=peft_config,\n",
-    "        dataset_text_field=\"text\",\n",
-    "        max_seq_length=512,\n",
-    "        tokenizer=tokenizer,\n",
+    "        #dataset_text_field=\"text\",\n",
+    "        #max_seq_length=512,\n",
+    "        #tokenizer=tokenizer,\n",
     "        args=args,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### ---> 11 trainer = SFTTrainer(\n",
+    "- TypeError: SFTTrainer.__init__() got an unexpected keyword argument 'dataset_text_field'\n",
+    "- TypeError: SFTTrainer.__init__() got an unexpected keyword argument 'max_seq_length'\n",
+    "- TypeError: SFTTrainer.__init__() got an unexpected keyword argument 'tokenizer'\n",
+    "- KeyError: \"Invalid keys in the example: {'messages', 'prompt'}\""
    ]
   },
   {
