--- a/Notebook/Jupyter/path/LLM_Fine-tuning1.ipynb
+++ b/Notebook/Jupyter/path/LLM_Fine-tuning1.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "source": [
     "# Hugging Face Hub の Phi-3-mini モデル の LoRAによる効率的なファインチューニング手順\n",
-    "- FT(LoRA)でPythonコード生成に特化させる。\n",
-    "- 繰り返し使用することを考慮して、インストレーションはマークダウン化してある。\n",
-    "- https://github.com/microsoft/PhiCookBook/blob/main/code/04.Finetuning/Phi-3-finetune-lora-python.ipynb"
+    "- ファインチューニング(LoRA)でPythonコード生成に特化させることを目的とする。\n",
+    "- 繰り返し使用することを考慮して、インストレーションはマークダウン化してある\n",
+    "- ...が現時点で動作せず（前提ライブラリがバージョンアップし下位互換が無視されている）。\n",
+    "- 元となるコードは[コチラ](LLM_Fine-tuning2.ipynb)"
    ]
   },
   {
