--- a/Notebook/Jupyter/path/LLM_Fine-tuning2.ipynb
+++ b/Notebook/Jupyter/path/LLM_Fine-tuning2.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ORG: https://github.com/microsoft/PhiCookBook/blob/main/code/04.Finetuning/Phi-3-finetune-lora-python.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "uTAiuz2uvPng"
    },
@@ -1092,10 +1099,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### ---> 11 trainer = SFTTrainer(\n",
     "- TypeError: SFTTrainer.__init__() got an unexpected keyword argument 'dataset_text_field'\n",
