--- a/Notebook/path/LLM_Fine-tuning2.ipynb
+++ b/Notebook/path/LLM_Fine-tuning2.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# huggingface/trl SFTTrainerを使用したファインチューニング\n",
-    "参考：https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?huggingface%2Ftrl%20SFTTrainer"
+    "参考：https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?huggingface%2Ftrl%20SFTTrainer  \n",
+    "※ ディスク領域が必要なので、このNBを実行する場合は、gitクローンする段階で/mnt/tmp（※ 一時領域）などに配置すると良い。"
    ]
   },
   {
@@ -51,6 +52,53 @@
    "source": [
     "!pip cache purge\n",
     "# !pip install --upgrade XXXX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c321e59c-a60f-44b0-b6f7-61ccf877d9dd",
+   "metadata": {},
+   "source": [
+    "#### 実際にインストールしたもの一覧"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9976ad88-4aef-4a40-a2ac-296f50b29098",
+   "metadata": {},
+   "source": [
+    "- datasets : 自然言語処理のサンプルデータセットを簡単に取り扱えるライブラリ\n",
+    "- transformers : Hugging Face の transformers ライブラリ\n",
+    "- accelerate : Hugging Face の accelerate ライブラリは、TPU/GPU/CPUでの実行を同じコードで記述できる\n",
+    "- trl : Hugging Face の trl (Transformer Reinforcement Learning) ライブラリ（SFT用）\n",
+    "- peft : Hugging Face の peft (Parameter-Efficient Fine Tuning) ライブラリ（LoRA用）\n",
+    "```bash\n",
+    "!pip install --upgrade datasets\n",
+    "!pip install --upgrade transformers\n",
+    "!pip install --upgrade accelerate\n",
+    "!pip install --upgrade trl\n",
+    "!pip install --upgrade peft\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1ba7444-a8ac-4aa5-801b-a3745527351a",
+   "metadata": {},
+   "source": [
+    "#### 以下のエラーが出るので、インストール後に一旦再起動\n",
+    "```\n",
+    "ImportError: Using the `Trainer` with `PyTorch` requires `accelerate>=0.26.0`: Please run `pip install transformers[torch]` or `pip install 'accelerate>=0.26.0'`\n",
+    "```\n",
+    "参考：https://github.com/huggingface/transformers/issues/24147"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1128c437-1443-4c77-baff-f564373242ba",
+   "metadata": {},
+   "source": [
+    "#### インストール結果の確認"
    ]
   },
   {
@@ -221,45 +269,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c321e59c-a60f-44b0-b6f7-61ccf877d9dd",
-   "metadata": {},
-   "source": [
-    "#### 実際にインストールしたもの一覧"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9976ad88-4aef-4a40-a2ac-296f50b29098",
-   "metadata": {},
-   "source": [
-    "- datasets : 自然言語処理のサンプルデータセットを簡単に取り扱えるライブラリ\n",
-    "- transformers : Hugging Face の transformers ライブラリ\n",
-    "- accelerate : Hugging Face の accelerate ライブラリは、TPU/GPU/CPUでの実行を同じコードで記述できる\n",
-    "- trl : Hugging Face の trl (Transformer Reinforcement Learning) ライブラリ（SFT用）\n",
-    "- peft : Hugging Face の peft (Parameter-Efficient Fine Tuning) ライブラリ（LoRA用）\n",
-    "```bash\n",
-    "!pip install --upgrade datasets\n",
-    "!pip install --upgrade transformers\n",
-    "!pip install --upgrade accelerate\n",
-    "!pip install --upgrade trl\n",
-    "!pip install --upgrade peft\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a1ba7444-a8ac-4aa5-801b-a3745527351a",
-   "metadata": {},
-   "source": [
-    "#### 以下のエラーが出るので、ココで一旦再起動\n",
-    "```\n",
-    "ImportError: Using the `Trainer` with `PyTorch` requires `accelerate>=0.26.0`: Please run `pip install transformers[torch]` or `pip install 'accelerate>=0.26.0'`\n",
-    "```\n",
-    "参考：https://github.com/huggingface/transformers/issues/24147"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7f345891-bb1f-432b-9030-323752eadbff",
    "metadata": {},
    "source": [
@@ -296,10 +305,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DATA\n",
+    "TEST_FILE_PATH = 'finetuning/data/test1.jsonl'\n",
+    "\n",
+    "# MODEL\n",
     "MODEL_URI                        = 'meta-llama/Llama-3.2-1B-Instruct'\n",
-    "MODEL_PATH                = 'finetuning/models/Llama-3.2-1B-Instruct'\n",
-    "FTED_MODEL_PATH = 'finetuning/finetuned_models/Llama-3.2-1B-Instruct'\n",
-    "TEST_FILE_PATH  = \"finetuning/data/test.jsonl\""
+    "MODEL_PATH      =           'finetuning/models/Llama-3.2-1B-Instruct'\n",
+    "FTED_MODEL_PATH = 'finetuning/finetuned_models/Llama-3.2-1B-Instruct'"
    ]
   },
   {
@@ -349,7 +361,8 @@
    "id": "f6215c13-dafc-42dc-b122-b926145ee600",
    "metadata": {},
    "source": [
-    "### モデルとトークナイザのダウンロードとセーブ"
+    "### モデルとトークナイザのダウンロードとセーブ\n",
+    "初回のみなのでMarkdownにしておく。"
    ]
   },
   {
@@ -395,7 +408,8 @@
    "metadata": {},
    "source": [
     "#### 間違った方法\n",
-    "なお、以下で表示される結果の「Datasetのtrain」と「DatasetDictのtrain」は対応しているわけではない。"
+    "- なお、以下で表示される結果の「Datasetのtrain」と「DatasetDictのtrain」は対応している訳ではない。\n",
+    "- これは、`datasets.DatasetDict({'train': dataset})`のtrain → xxxxx に変えて実行すると解る。"
    ]
   },
   {
@@ -423,7 +437,8 @@
     }
    ],
    "source": [
-    "dataset = datasets.load_dataset(\"json\", data_files=TEST_FILE_PATH)\n",
+    "test_file = \"./data/test.jsonl\"\n",
+    "dataset = datasets.load_dataset(\"json\", data_files=test_file)\n",
     "dataset = datasets.DatasetDict({'train': dataset})\n",
     "dataset"
    ]
@@ -466,10 +481,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23d38632-b40e-4268-b5af-740f176bb026",
+   "metadata": {},
+   "source": [
+    "### SFTTrainerの定義"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1d9e3b2c-d7de-4451-8f20-86841b8091f4",
    "metadata": {},
    "source": [
-    "### モデルとトークナイザのロード"
+    "#### model, tokenizer\n",
+    "モデルとトークナイザのロード"
    ]
   },
   {
@@ -490,14 +514,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23d38632-b40e-4268-b5af-740f176bb026",
-   "metadata": {},
-   "source": [
-    "### SFTTrainerの定義"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e474fc80-e8ab-437a-9a8f-f635202b53f3",
    "metadata": {},
    "source": [
@@ -511,10 +527,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_args = TrainingArguments(\"test_trainer\")\n",
+    "training_args = TrainingArguments('test_trainer') # output_dirの指定になる。\n",
     "\n",
     "# 「OutOfMemoryError: CUDA out of memory.」への対応\n",
     "# training_args = TrainingArguments(\n",
+    "#     output_dir='test_trainer',\n",
     "#     per_device_train_batch_size=1, # 8, 4, 2\n",
     "#     gradient_checkpointing=True,\n",
     "#     bf16=True, #fp16=True  # NVIDIA Ampere 以降の GPU なら bf16=True も検討\n",
@@ -549,7 +566,7 @@
    "id": "7b9c2904-70a8-4db6-bb8b-7897f641e067",
    "metadata": {},
    "source": [
-    "#### formatting_func"
+    "#### data_collator"
    ]
   },
   {
@@ -559,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response_template = \"### answer\\n\"\n",
+    "response_template = '### answer\\n'\n",
     "collator = DataCollatorForCompletionOnlyLM(response_template, tokenizer=tokenizer)"
    ]
   },
@@ -652,10 +669,18 @@
     "trainer = SFTTrainer(\n",
     "    model,\n",
     "    args=training_args,\n",
-    "    train_dataset=dataset[\"train\"], \n",
+    "    train_dataset=dataset['train'], \n",
     "    formatting_func=formatting_prompts_func,\n",
     "    data_collator=collator,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf97396b-9d17-4aca-a122-4103daafa301",
+   "metadata": {},
+   "source": [
+    "#### SFTTrainer.train_datasetを確認"
    ]
   },
   {
@@ -684,7 +709,7 @@
    ],
    "source": [
     "print(trainer.train_dataset)\n",
-    "# SFTTrainerの出力が途中で止まることがあるので3件目を確認\n",
+    "# SFTTrainerの出力が途中で止まることがあるので4件目を確認\n",
     "print(tokenizer.decode(trainer.train_dataset[3]['input_ids']))"
    ]
   },
@@ -693,7 +718,7 @@
    "id": "d184dd04-f91b-4672-bf86-10f39ae6fde0",
    "metadata": {},
    "source": [
-    "### SFTの定義"
+    "### SFTTrainer.trainで実行"
    ]
   },
   {
@@ -701,21 +726,22 @@
    "id": "66b5d36a-ff7d-4c15-9e3f-5b0337257f1a",
    "metadata": {},
    "source": [
-    "#### OutOfMemoryError: CUDA out of memory. 対策"
+    "#### OutOfMemoryError: CUDA out of memory. 対策\n",
+    "要るか要らないか解らないので、取り敢えずMarkdownで。"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "8b9d6ac1-86b3-4292-b69d-ac611d0869c6",
+   "cell_type": "markdown",
+   "id": "011c777b-96bd-4244-ae04-d1f73108f61d",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "#`use_cache=True`は勾配チェックポイントと互換性が無いので併用できない。\n",
     "import os\n",
-    "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"expandable_segments:True\"\n",
+    "os.environ['PYTORCH_CUDA_ALLOC_CONF'] = 'expandable_segments:True'\n",
     "torch.cuda.empty_cache()\n",
-    "torch.cuda.ipc_collect()"
+    "torch.cuda.ipc_collect()\n",
+    "```"
    ]
   },
   {
@@ -753,8 +779,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer.save_pretrained(FTED_MODEL_PATH)\n",
+    "tokenizer.from_pretrained(FTED_MODEL_PATH)\n",
+    "trainer.from_pretrained(FTED_MODEL_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a82fa6ee-a979-4676-a736-aae1b36e2da2",
+   "metadata": {},
+   "source": [
+    "## SFTされたモデルで推論を実行"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9af4de53-c389-4ee3-9435-10c1406be5c9",
+   "metadata": {},
+   "source": [
+    "### SFTされたモデルとトークナイザのロード"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6374a01b-b359-479f-8c06-d15f24c6be6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.save_pretrained(FTED_MODEL_PATH) # ,device_map=\"auto\", torch_dtype=torch.float16)\n",
     "trainer.save_model(FTED_MODEL_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c43f05c-1d36-4fb7-88c3-ab3d22adac22",
+   "metadata": {},
+   "source": [
+    "### プロンプトをトークン化\n",
+    "`pt`は、PyTorch テンソル（torch.Tensor）の意味"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa1ffca8-6e96-432b-8288-1b2c0507e386",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = tokenizer('...プロンプト...', return_tensors='pt').to(model.device)\n",
+    "print(inputs) # テンソルのディクショナリになっている。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28ebc2e1-5fcc-4436-b07c-4f408bc58f36",
+   "metadata": {},
+   "source": [
+    "### 推論を実行\n",
+    "- 推論時なので勾配計算しない`no_grad`プロックに入れて実行\n",
+    "- `**inputs`として渡すと「ディクショナリのキー・値」が「キーワード引数・引数」に展開される。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f1a8017-2d25-4ece-a25f-38990dad9c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    tokens = model.generate(\n",
+    "        **inputs,\n",
+    "        max_new_tokens=64,\n",
+    "        do_sample=True,\n",
+    "        temperature=0.7,\n",
+    "        top_p=0.9,\n",
+    "        repetition_penalty=1.05,\n",
+    "        pad_token_id=tokenizer.pad_token_id,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4749c90b-0844-4226-a390-781cf974e71b",
+   "metadata": {},
+   "source": [
+    "### 推論結果を表示\n",
+    "推論結果をデトークン化して表示。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "914bda34-91a2-4d3a-bdcf-3a24fe3f04ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = tokenizer.decode(tokens[0], skip_special_tokens=True)\n",
+    "print(output)"
    ]
   }
  ],
